# Autonomous-Vehicles-Final-Project

./: README.md
group5_sim_launch/: CMakeLists.txt  package.xml
group5_sim_launch/launch/: sim_launch.launch
group5_sim_launch/src/: Tldp.cpp  Tldp.hpp  tld_node.cpp
traffic_color/: CMakeLists.txt  package.xml
traffic_color/cfg/: traffic_color.cfg
traffic_color/launch/: traffic_color.launch
traffic_color/src/: Tcd.cpp  Tcd.hpp  tcd_node.cpp
traffic_color/urdf/: traffic_world_model.urdf.xacro
traffic_color/yaml/: traffic_world_scenario.yaml  traffic_world_sim_params.yaml
