<?xml version="1.0"?>
<package format="2">
  <name>traffic_color</name>
  <version>0.0.0</version>
  <description>
    Traffic Light Detection Project
  </description>
  <maintainer email="schalla@oakland.edu">Karthikeya Challa</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>dataspeed_ulc_msgs</depend>
</package>
